src/styles/Collapse.scss
@import "variables.scss";

.collapse{
    margin-bottom:20px;
    margin-bottom:30px;
    font-size: 18px;

    &-list{
        width: 80%;
        margin: 38px auto;
    }

    &-header{
        background-color: $primary;
        color:$white;
        display: flex;
        justify-content: space-between;
        border-radius: 5px;
        font-family: $font-family;
        padding: 15px;
        outline:none;
        border:none;
        width:100%;
        font-size: 24px;

        img{
            width:24px;
        }
    }

    &-body{
        background-color: $gray;
        border-radius:10px;
        padding:20px;
        color:$primary;
        font-weight: $regular-weight;

        p{
            margin:0;
            line-height: 1.4;
        }
    }

    &-hidden{
        opacity:0;
        max-height:0;
        transition: all 250ms ease-in-out;
    }

    &-visible{
        opacity: 1;
        max-height:auto;
        transition: all 250ms ease-in-out;
    }

}

